@@ -1,3 +1,4 @@
 class Game < ApplicationRecord
+  has_many :questions
   belongs_to :creator
 end
