@@ -1,0 +1,3 @@
+class Question < ApplicationRecord
+  belongs_to :game
+end
