@@ -1,0 +1,9 @@
+class CreateQuestions < ActiveRecord::Migration[5.1]
+  def change
+    create_table :questions do |t|
+      t.string :title
+
+      t.timestamps
+    end
+  end
+end
